[tool.poetry]
name = "py16web-hw08"
version = "0.1.0"
description = ""
authors = ["djmary-k <kondratyukmv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pika = "^1.3.2"
mongoengine = "^0.27.0"
redis = "^5.0.1"
redis-lru = "^0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
